# rulesandprocesses

./: .gitignore  .zenodo.json  CITATION.cff  Makefile  README.md  README_PACKAGE.md  SECURITY.md  VALIDATION_REPORT.md  covering_prompt_for_fable5.md  manifest.json
conductor/: DEFERRED_ROADMAP.md  NEXTGEN_RELEASE_STATUS.md  PROGRAMME_GATE_ACTION_PACKET.md  PROGRAMME_GATE_REGISTRY.json  TERMINOLOGY.md  V1_REMAINING_GATES_PACKET.md  V1_ROADMAP.md  edithatogo-repo-boundaries.md  github-planning.md  index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  v1-release-gates.json  workflow.md
contracts/tools/: README.md  pyproject.toml
contracts/tools/src/pic_contracts/: __init__.py  compatibility.py  compatibility_cli.py  diff.py  diff_cli.py  health_profiles.py  process_mappings_consumption.py  process_profile.py  safety.py  schema_utils.py  traces.py  validate_cli.py  validate_examples.py  validation.py
contracts/tools/tests/: test_adverse_incident_fixtures.py  test_adverse_incident_safety_handoff.py  test_adverse_incident_sources.py  test_adverse_incident_triangulation.py  test_camunda_architecture.py  test_foi_process_profile_candidate.py  test_health_technology_profile.py  test_health_technology_profiles.py  test_pic_diff.py  test_pic_fixtures_schema.py  test_pic_foio_compatibility_schema.py  test_pic_foio_offline_bundle.py  test_pic_parameters_schema.py  test_pic_semantics_schema.py  test_pic_traces_schema.py  test_pic_validate.py  test_process_mappings_consumption.py  test_process_profile_schema.py  test_safety.py  test_scaffold.py
(+584 files in other folders)
